<resources>
    <string name="app_name">EduOrganizer</string>
    <string name="screen1">East Delta University</string>
    <string name="screen2">EdU Schedule Organizer</string>
    <string name="screen3">Notes</string>
    <string name="screen1desc">East Delta University (Bengali: ইস্ট ডেল্টা বিশ্ববিদ্যালয় or EDU) is a private university in Chittagong, Bangladesh</string>
    <string name="screen2desc">East Delta University (Bengali: ইস্ট ডেল্টা বিশ্ববিদ্যালয় or EDU) is a private university in Chittagong, Bangladesh</string>
    <string name="screen3desc">East Delta University (Bengali: ইস্ট ডেল্টা বিশ্ববিদ্যালয় or EDU) is a private university in Chittagong, Bangladesh</string>
    <string name="startDesc">East Delta University (Bengali: ইস্ট ডেল্টা বিশ্ববিদ্যালয় or EDU) is a private university in Chittagong, Bangladesh.</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="sign_in_account">Sign in to your</string>
    <string name="register_text"><u>Register Now</u></string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navi">BottomNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login EduBox</string>
    <string name="title_logins">Create Account EduBox</string>
    <string name="default_notification_channel_id">FarhadFoysal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shortcut_label1">EduBox-QR</string>
    <string name="shortcut_label1_long">EduBox-Please Scan QR Code</string>
    <string name="shortcut_disabled_message1">EduBox~QR Code Scanner Option Here</string>
    <string name="shortcut_label2">ID Scanner</string>
    <string name="shortcut_label2_long">User Id card Scanner</string>
    <string name="shortcut_disabled_message2">Here You can scan your Id card</string>
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="user_already_exist_try_again">"User already exist! Try again!  "</string>
    <string name="create_account">Create Account</string>
    <string name="next_btn">Next</string>
    <string name="login">Login</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="main_title">Classes</string>
    <string name="edit_title">Edit</string>
    <string name="settings_title">Settings</string>
    <string name="add_title">Add</string>
    <string name="auth_email">classorganizerdiu@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">This app will stop receiving updates after Fall 2019. Thank you for being a part of the journey!</string>
    <string name="level_title">Select Level</string>
    <string name="term_title">Term</string>
    <string name="section_title">Section</string>
    <string name="program_title">Select your program</string>
    <string name="drawer_app_title">Class Organizer</string>
    <string name="drawer_dev_email">musfiqus@gmail.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_initial_label">Edit Initial</string>
    <string name="teacher_initial_hint">Teacher\'s Initial</string>
    <string name="choose_weekday_label">Choose Weekday</string>
    <string name="edit_room_no_label">Edit Room No</string>
    <string name="room_no_hint">Room No</string>
    <string name="share_title">Share link using</string>
    <string name="share_text_extra">Check out this awesome class routine android app for DIU CSE students at https://play.google.com/store/apps/details?id=bd.edu.daffodilvarsity.classorganizer</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_share">Share</string>
    <string name="drawer_title_report">Report a problem</string>
    <string name="edit_popup">Edit</string>
    <string name="save_popup_title">Save</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="course_title_hint">Course Title</string>
    <string name="enter_course_title">Enter Course Title</string>
    <string name="course_code">Course Code</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="enter_initial">Enter Initial</string>
    <string name="enter_room_no">Enter Room No</string>
    <string name="starting_time">Starting Time</string>
    <string name="ending_time">Ending Time</string>
    <string name="edit_course_title">Edit Course Title</string>
    <string name="time_delay_summary">"Currently you're receiving reminders &lt;b>%1$s&lt;/b> before the class"</string>
    <string name="notification_enabled_summary">Class notifications are currently enabled</string>
    <string name="notification_disabled_summary">Class notifications are currently disabled</string>
    <string name="ramadan_enabled_summary">Ramadan timetable is enabled</string>
    <string name="ramadan_disabled_summary">Ramadan timetable is disabled</string>
    <string name="user_preference_summary">Current User Type: &lt;b>%1$s&lt;/b></string>
    <string name="department_preference_summary">Current Department: &lt;b>%1$s&lt;/b>, Program: &lt;b>%2$s&lt;/b>, Campus: &lt;b>%3$s&lt;/b></string>
    <string name="routine_preference_summary_student">"Current Section: &lt;b>%1$s&lt;/b>, Level: &lt;b>%2$d&lt;/b>, Term: &lt;b>%3$d&lt;/b></string>
    <string name="routine_preference_summary_teacher">"Current User: &lt;b>%1$s&lt;/b></string>
    <string name="limit_preference_enabled_summary">Currently your modifications will show up only on your modified section</string>
    <string name="limit_preference_disabled_summary">Currently your modifications will show up on all sections</string>
    <string name="empty_search_hint">You can search by course code or course name or teacher\'s initial or room no</string>
    <string name="not_found_search_hint">No classes found</string>
    <string name="not_found_search_hint_room">No rooms found</string>
    <string name="course_title">Course title</string>
    <string name="abc_course">ABC COURSE</string>
    <string name="teacher_s_initial">Teacher\'s initial</string>
    <string name="tm">TM</string>
    <string name="weekday">Day</string>
    <string name="zenday">Zenday</string>
    <string name="room_no">Room No</string>
    <string name="time">Time</string>
    <string name="_10_00_am_11_30_am">10.00 AM</string>
    <string name="_10_00_am">10.00 AM</string>
    <string name="_11_30_am">11.30 AM</string>
    <string name="room">Room</string>
    <string name="communicate">Communicate</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="search_by_code">Search by Code</string>
    <string name="search_by_title">Search by Title</string>
    <string name="search_by_teacher">Search by Teacher</string>
    <string name="search_by_room">Search by Room</string>
    <string name="delete">Delete</string>
    <string name="suggestion_email_subject">Add section to Class Organizer</string>
    <string name="contact_mailll">Contact: musfiqus@gmail.com</string>
    <string name="send_mail">SEND EMAIL</string>
    <string name="user_settings_changed">User settings changed</string>
    <string name="dept_settings_changed">Department settings changed</string>
    <string name="user_popup_title">Choose User Type</string>
    <string name="dept_popup_title">Choose Your Department</string>
    <string name="no_changes">No changes were made</string>
    <string name="warning">Warning!</string>
    <string name="exit">Exit</string>
    <string name="dialog_code">Source Code and More info</string>
    <string name="dialog_more">More About Android Control</string>
    <string name="about_developer">About Developer</string>
    <string name="about_email">fongwe_a@hotmail.com or amphancm@gmail.com</string>
    <string name="about_company">Bee Project ( Thailand )</string>
    <string name="about_tel">(+668)16452400</string>
    <string name="about_cost">( Source Code is 1-50 USD. depend on App.)</string>
    <string name="about_code">If you want...\10Full Android Source code \10Pls. contact by email.</string>
    <string name="timer_1">Timer 1 Setup</string>
    <string name="timer_2">Timer 2 Setup</string>
    <string name="timer_3">Timer 3 Setup</string>
    <string name="timer_4">Timer 4 Setup</string>
    <string name="timer_5">Timer 5 Setup</string>
    <string name="timer_6">Timer 6 Setup</string>
    <string name="timer_7">Timer 7 Setup</string>
    <string name="timer_8">Timer 8 Setup</string>
    <string name="timer_select">Select your timer</string>
    <string name="timer_choose">Choose Timer</string>
    <string name="menu_settings">Settings</string>
    <string name="button_save">SAVE</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_restart">Restart</string>
    <string name="button1">Device 1 Name</string>
    <string name="button2">Device 2 Name</string>
    <string name="button3">Device 3 Name</string>
    <string name="button4">Device 4 Name</string>
    <string name="button5">Device 5 Name</string>
    <string name="button6">Device 6 Name</string>
    <string name="button7">Device 7 Name</string>
    <string name="button8">Device 8 Name</string>
    <string name="label_name_set">Set Your Device Name</string>
</resources>