<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_1" android:key="timer_1" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_2" android:key="timer_2" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_3" android:key="timer_3" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_4" android:key="timer_4" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_5" android:key="timer_5" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_6" android:key="timer_6" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_7" android:key="timer_7" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
    <ListPreference android:entries="@array/timer_list_preference" android:title="@string/timer_8" android:key="timer_8" android:summary="@string/timer_select" android:defaultValue="3600000" android:dialogTitle="@string/timer_choose" android:entryValues="@array/timer_minutes_list_preference"/>
</PreferenceScreen>
