<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#ff0000" android:id="@+id/textView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dialog_more"/>
    <RelativeLayout android:id="@+id/rLayout" android:layout_width="match_parent" android:layout_height="400dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="22sp" android:id="@+id/buttonDialogCode" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/dialog_code" android:layout_weight="1"/>
        <Button android:textSize="22sp" android:id="@+id/buttonDialogOk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit"/>
    </LinearLayout>
</LinearLayout>
