<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="22dp" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_settings" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="14"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/buttonSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/button_save" android:layout_weight="1"/>
        <Button android:id="@+id/buttonCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_cancel" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
